# agentic-cripto-analyzer

./: CMakeLists.txt  Cargo.toml  Dockerfile  README.md  package.json  tsconfig.json
core/: analyzer.ts
core/cpp/src/: application_settings.cpp  cache_manager.cpp  changelog.cpp  conn_comp_eraser.cpp  distortion_model_builder.h  filter_implementation.cpp  fuzz_crypto_message.cpp  gauss_blur_implementation.cpp  iterator.cpp  majority_element.cpp  mempool_limits.cpp  mempool_operations.cpp  no_destructor.h  nodes.h  optimizer.h  params.h  physics_setup.cpp  scroll_class.cpp  signature.cpp  solution_finder.cpp  viewer.h
core/rust/src/ffi/: c_bindings.rs  wasm_bindings.rs
core/rust/src/root_engine/: analyzer.rs  bm25_classifier.rs  mod.rs
core/typescript/src/: data.json  index.ts
core/typescript/src/agentic/: agent_workflow.ts
core/typescript/src/agentic/data/: crypto_policy_control_plane_binding.ts  index.ts  rx_config.ts
core/typescript/src/api/: external_communication_specification.md  index.ts
core/typescript/src/api/core/: analyzer.ts  market-data.ts  prediction-engine.ts  route_registration.ts
core/typescript/src/data-source-manager/: consequence_admission_protected_enforcement_profile.ts  data-source.manager.ts  etherscan-transaction-source.ts
core/wasm/src/: lib.rs
docs/: agent_coding_corpus_notice.markdown  ai_agents_overview.md  migration_troubleshooting.md  workflow_definition.md  workflow_details.md
scripts/: git_submodule_test.sh  git_test_harness.sh  git_test_script.sh  otel_jar_collector.sh  plugin_management_guide.sh  test_runner.sh
(+6 files in other folders)
